--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,35 @@
 body {
   font-family: 'Noto Sans KR', sans-serif;
-  background-color: rgba(0, 0, 0, 0.5); /* 반투명한 검은색 배경으로 변경 */
+  background-color: rgba(255, 255, 255, 0.5); /* 반투명한 검은색 배경으로 변경 */
   margin: 50px;
 }
 
+input {
+  color: white;
+}
+/*수정*/
+.HomeImageContainer {
+  position: fixed; /* 배경 이미지를 고정 위치로 설정 */
+  top: 0;
+  left: 0;
+  height: 100%; /* 높이를 전체 화면으로 설정 */
+  width: 100%; /* 너비를 전체 화면으로 설정 */
+  z-index: -1; /* 로그인 창 등 다른 요소들이 위에 오도록 z-index 설정 */
+  opacity: 0.5; /* 불투명도 75% 설정 */
+  background-blend-mode: darken; /* 배경 이미지와 색상을 어둡게 섞음 */
+}
+
+.App-logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  height: 75px;
+}
+
+/*수정*/
+
 .background {
-  background-color: rgba(255, 255, 255, 0.8); /* 반투명한 흰색 배경으로 변경 */
+  background-color: rgb(0,0,0);
   height: auto;
   width: 90%;
   max-width: 450px;
@@ -22,6 +46,9 @@ body {
   padding: 30px;
   flex-direction: column;
 }
+.form h2 {
+  color: white;
+}
 
 .login {
   border: none;
@@ -37,13 +64,13 @@ body {
 .login:focus,
 .login:hover {
   outline: none;
-  border-bottom-color: rgb(68, 112, 67);
+  border-bottom-color: rgb(229, 9, 20);
 }
 
 .btn {
   border: none;
   width: 75%;
-  background-color: rgb(68, 112, 67);
+  background-color: rgb(229, 9, 20);
   color: white;
   padding: 15px 0;
   font-weight: 600;
@@ -51,7 +78,20 @@ body {
   cursor: pointer;
   transition: .2s;
 }
-
 .btn:hover {
-  background-color: rgb(49, 82, 48);
+  background-color: rgb(204, 0, 0);
+}
+
+.btn-signup {
+  background-color: transparent;
+  color: gray;
+  /* 추가적인 스타일 속성 */
+  border-radius: 20px;
+  border: none;
+  text-decoration: underline;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.btn-signup:hover {
+  background-color: lightgray;
 }
